--- a/index.html
+++ b/index.html
@@ -5,27 +5,81 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/9891a9465b.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/css/main.css">
+
     <title>Front End Project</title>
 </head>
 
 <body>
     <header>
         <div class="container-fluid">
-            <div class="row">
+            <div class="row covid-nav">
                 <div class="covid d-flex justify-content-center fw-light">
-                    Due to the <span id="covidSpan" class="px-2"> COVID 19 </span> epidemic, orders may be processed with a slight
+                    Due to the <span id="covidSpan" class="px-1 fw-bold"> COVID 19 </span> epidemic, orders may be
+                    processed
+                    with a slight
                     delay
                 </div>
+            </div>
+            <div class="row second-nav col-12 d-flex justify-content-around">
+                <ul class="nav nav-tabs left-second-nav px-5 col-xl-4">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">My account</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Wishlist</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Order Tracking</a>
+                    </li>
+                </ul>
+                <div class="col-5 middle-second-nav px-2"><i class="fa-regular fa-hand"></i> <span> 100% Secure
+                        delivery without contacting the
+                        courier</span>
+                    <span class="px-3 slash">|</span> <span>Need help? Call Us: <span class="numb">+ 0020
+                            500</span></span>
+                </div>
+                <ul class="nav nav-tabs last-second-nav px-2 col-2">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle lang drpdwnT" data-toggle="" href="#" role="button"
+                            aria-haspopup="true" aria-expanded="false">English</a>
+                        <div class="drpdwnM">
+                            <a class="dropdown-item" href="#">English</a>
+                            <a class="dropdown-item" href="#">Spanish</a>
+                            <a class="dropdown-item" href="#">Germany</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle money drpdwnT" data-toggle="" href="#" role="button"
+                            aria-haspopup="true" aria-expanded="false">USD</a>
+                        <div class="drpdwnM">
+                            <a class="dropdown-item" href="#">USD</a>
+                            <a class="dropdown-item" href="#">INR</a>
+                            <a class="dropdown-item" href="#">GBP</a>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </div>
     </header>
 
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
 <script src="/assets/script/script.js"></script>
 
