feat : third nav start

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div class="row second-nav col-12 d-flex justify-content-around">
-                <ul class="nav nav-tabs left-second-nav px-5 col-xl-4">
+                <ul class="nav nav-tabs left-second-nav px-4 col-4">
                     <li class="nav-item">
                         <a class="nav-link" href="#">About Us</a>
                     </li>
@@ -39,10 +39,10 @@
                         <a class="nav-link" href="#">Order Tracking</a>
                     </li>
                 </ul>
-                <div class="col-5 middle-second-nav px-2"><i class="fa-regular fa-hand"></i> <span> 100% Secure
+                <div class="col-5 middle-second-nav px-2"><i class="fas px-1 fa-hands"></i> <span> 100% Secure
                         delivery without contacting the
                         courier</span>
-                    <span class="px-3 slash">|</span> <span>Need help? Call Us: <span class="numb">+ 0020
+                    <span class="px-2 slash">|</span> <span>Need help? Call Us: <span class="numb">+ 0020
                             500</span></span>
                 </div>
                 <ul class="nav nav-tabs last-second-nav px-2 col-2">
@@ -65,6 +65,9 @@
                         </div>
                     </li>
                 </ul>
+            </div>
+            <div class="row third-nav">
+
             </div>
         </div>
     </header>
