feat: clear code and respons added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     delay
                 </div>
             </div>
-            <div class="row second-nav col-12 d-flex justify-content-around">
+            <div class="row second-nav col-12 d-flex justify-content-between">
                 <ul class="nav nav-tabs left-second-nav px-4 col-4">
                     <li class="nav-item">
                         <a class="nav-link" href="#">About Us</a>
@@ -39,7 +39,7 @@
                         <a class="nav-link" href="#">Order Tracking</a>
                     </li>
                 </ul>
-                <div class="col-5 middle-second-nav px-2"><i class="fas px-1 fa-hands"></i> <span> 100% Secure
+                <div class="col-5 middle-second-nav px-2"><i class="fas px-2 fa-hands"></i> <span> 100% Secure
                         delivery without contacting the
                         courier</span>
                     <span class="px-2 slash">|</span> <span>Need help? Call Us: <span class="numb">+ 0020
@@ -66,8 +66,10 @@
                     </li>
                 </ul>
             </div>
-            <div class="row third-nav">
-
+            <div class="row col-12 d-flex third-nav">
+                <div class="col-1 img px-5"><img src="/assets/img/bacola-logo.png" alt="">
+                </div>
+                <p class="logoTitle">Online Grocery Shopping Center</p>
             </div>
         </div>
     </header>
