--- a/index.html
+++ b/index.html
@@ -88,8 +88,41 @@
                 </div>
             </div>
         </div>
-    </header>
+        <div class="container-fluid main-navBar">
+            <div class="row">
+                <div class="col-2 offset-1">
+                    <button class="btn btn-info">ALL CATEGORIES</button>
+                </div>
+                <nav class="col-9">
+                    <ul class="pages py-2 d-flex justify-content-start">
+                        <li><a href="">HOME <i class="fa fa-chevron-down" aria-hidden="true"></i></a>
+                            <ul class="HomeSubMenu">
+                                <li><a href="">Home1</a></li>
+                                <li><a href="">Home2</a></li>
+                                <li><a href="">Home3</a></li>
+                                <li><a href="">Home4</a></li>
+                                <li><a href="">Home5</a></li>
+                            </ul>
+                        <li>
+                        <li><a href="">SHOP <i class="fa fa-chevron-down" aria-hidden="true"></i></a></li>
+                        <li><a href="">MEATS & SEAFOOD</a></li>
+                        <li><a href="">BAKERY</a></li>
+                        <li><a href="">BEVERAGES</a></li>
+                        <li><a href="">BLOG</a></li>
+                        <li><a href="">CONTACT</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
 
+    </header>
+    <main>
+        <div class="container-fluid">
+            <div class="row">
+                <div style="width: 100%; height: 1000px; background-color: grey;"></div>
+            </div>
+        </div>
+    </main>
 </body>
 
 
