--- a/index.html
+++ b/index.html
@@ -89,22 +89,79 @@
             </div>
         </div>
         <div class="container-fluid main-navBar">
-            <div class="row">
-                <div class="col-2 offset-1">
+            <div class="row col-12">
+                <div class="col-3 offset-1">
                     <button class="btn btn-info">ALL CATEGORIES</button>
                 </div>
-                <nav class="col-9">
+                <nav class="col-8 d-flex justify-content-start">
                     <ul class="pages py-2 d-flex justify-content-start">
-                        <li><a href="">HOME <i class="fa fa-chevron-down" aria-hidden="true"></i></a>
-                            <ul class="HomeSubMenu">
-                                <li><a href="">Home1</a></li>
-                                <li><a href="">Home2</a></li>
-                                <li><a href="">Home3</a></li>
-                                <li><a href="">Home4</a></li>
-                                <li><a href="">Home5</a></li>
-                            </ul>
-                        <li>
-                        <li><a href="">SHOP <i class="fa fa-chevron-down" aria-hidden="true"></i></a></li>
+                        <div class="home">
+                            <li><a href="">HOME <i class="fa fa-chevron-down" aria-hidden="true"></i></a>
+                                <ul class="HomeSubMenu">
+                                    <li><a href="">Home1</a></li>
+                                    <li><a href="">Home2</a></li>
+                                    <li><a href="">Home3</a></li>
+                                    <li><a href="">Home4</a></li>
+                                    <li><a href="">Home5</a></li>
+                                </ul>
+                            <li>
+                        </div>
+                        <div class="shop">
+                            <li><a href="">SHOP <i class="fa fa-chevron-down" aria-hidden="true"></i></a>
+                                <ul class="ShopSubMenu">
+                                    <li><a href="">Shop Lists</a>
+                                        <ul class="subListMenu">
+                                            <li><a href="">Shop Default</a></li>
+                                            <li><a href="">Shop Right Sidebar</a></li>
+                                            <li><a href="">Shop Wide</a></li>
+                                            <li><a href="">List Left Sidebar</a></li>
+                                            <li><a href="">Load More Button</a></li>
+                                            <li><a href="">Infinite Scrolling</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="">Product Detail</a>
+                                        <ul class="subListMenu">
+                                            <li><a href="">Product Defaultt</a></li>
+                                            <li><a href="">Product Variable</a></li>
+                                            <li><a href="">Product Grouped</a></li>
+                                            <li><a href="">Product External</a></li>
+                                            <li><a href="">Product Downloadable</a></li>
+                                            <li><a href="">Product With Video</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="">Product Types</a>
+                                        <ul class="subListMenu">
+                                            <li><a href="">Single Type 1</a></li>
+                                            <li><a href="">Single Type 2</a></li>
+                                            <li><a href="">Single Type 3</a></li>
+                                            <li><a href="">Single Type 4</a></li>
+                                            <li><a href="">Thumbnails Left</a></li>
+                                            <li><a href="">Zoom Image</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="">Shop Pages</a>
+                                        <ul class="subListMenu">
+                                            <li><a href="">Cart</a></li>
+                                            <li><a href="">Checkout</a></li>
+                                            <li><a href="">My account</a></li>
+                                            <li><a href="">Wishlist</a></li>
+                                            <li><a href="">Order Tracking</a></li>
+                                            <li><a href="">Order on WhatsApp</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="">Shop Layouts</a>
+                                        <ul class="subListMenu">
+                                            <li><a href="">Two Columnst</a></li>
+                                            <li><a href="">Three Columns</a></li>
+                                            <li><a href="">Three Columns Wide</a></li>
+                                            <li><a href="">Four Columns</a></li>
+                                            <li><a href="">Four Columns Wide</a></li>
+                                            <li><a href="">Five Columns wide</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </li>
+                        </div>
                         <li><a href="">MEATS & SEAFOOD</a></li>
                         <li><a href="">BAKERY</a></li>
                         <li><a href="">BEVERAGES</a></li>
@@ -114,15 +171,14 @@
                 </nav>
             </div>
         </div>
-
     </header>
-    <main>
+    <!-- <main>
         <div class="container-fluid">
             <div class="row">
-                <div style="width: 100%; height: 1000px; background-color: grey;"></div>
+                <div style="width: 100%; margin-top: -28px; height: 1000px; background-color: grey;"></div>
             </div>
         </div>
-    </main>
+    </main> -->
 </body>
 
 
