feat: tam duzelmiyib carousel amma atim yene de :/

--- a/index.html
+++ b/index.html
@@ -172,18 +172,51 @@
             </div>
         </div>
     </header>
-    <!-- <main>
+    <main>
         <div class="container-fluid">
             <div class="row">
-                <div style="width: 100%; margin-top: -28px; height: 1000px; background-color: grey;"></div>
+                <section>
+                    <div id="carousel-container">
+                        <div>
+                            <ul id="carousel" class="animate">
+                                <li class="slide animate">
+                                    <img src="/assets/img/slider-image-6.jpg" />
+                                </li>
+                                <li class="slide animate">
+                                    <img src="/assets/img/slider-image-7.jpg" />
+                                </li>
+                                <li class="slide animate">
+                                    <img src="/assets/img/slider-image-6.jpg" />
+                                </li>
+                                <li class="slide animate">
+                                    <img src="/assets/img/slider-image-7.jpg" />
+                                </li>
+                                <li class="slide animate">
+                                    <img src="/assets/img/slider-image-6.jpg" />
+                                </li>
+                                <li class="slide animate">
+                                    <img src="/assets/img/slider-image-7.jpg" />
+                                </li>
+                            </ul>
+                        </div>
+                        <div id="controls">
+                            <span id="prev"><img
+                                    src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1014830/prev.png"></span>
+                            <span id="next"><img
+                                    src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1014830/next.png"></span>
+                        </div>
+                    </div>
+                </section>
             </div>
         </div>
-    </main> -->
+    </main>
 </body>
 
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
     crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
     integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
