--- a/index.html
+++ b/index.html
@@ -182,23 +182,37 @@
 
                                 <li class="slide animate">
                                     <img src="/assets/img/slider-image-7.jpg" />
+                                    <div class="content">
+                                        <h1>Salam</h1>
+                                        <p>Sag ol</p>
+                                    </div>
                                 </li>
                                 <li class="slide animate">
                                     <img src="/assets/img/slider-image-6.jpg" />
+                                    <div class="content">
+                                        <h1>sag ol</h1>
+                                        <p>Salam</p>
+                                    </div>
                                 </li>
                                 <li class="slide animate">
                                     <img src="/assets/img/slider-image-7.jpg" />
+                                    <div class="content">
+                                        <h1>Salam</h1>
+                                        <p>Sag ol</p>
+                                    </div>
                                 </li>
                                 <li class="slide animate">
                                     <img src="/assets/img/slider-image-6.jpg" />
+                                    <div class="content">
+                                        <h1>sag ol</h1>
+                                        <p>Salam</p>
+                                    </div>
                                 </li>
                             </ul>
                         </div>
                         <div id="controls">
-                            <span id="prev"><img
-                                    src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1014830/prev.png"></span>
-                            <span id="next"><img
-                                    src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1014830/next.png"></span>
+                            <span id="prev"><i class="fas fa-chevron-left left"></i></span>
+                            <span id="next"><i class="fas fa-chevron-right right"></i></span>
                         </div>
                     </div>
                 </section>
