feat :  categorySection , deadlineSection, weekendDiscountSection, CarouselProductSection design added

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                             </li>
                         </div>
                         <li><a href="">MEATS & SEAFOOD</a></li>
-                        <li><a href="">BAKERY</a></li>
+                        <li><a href=""> <i class='bx bx-color'></i>BAKERY</a></li>
                         <li><a href="">BEVERAGES</a></li>
                         <li><a href="">BLOG</a></li>
                         <li><a href="">CONTACT</a></li>
@@ -173,51 +173,159 @@
         </div>
     </header>
     <main>
-        <div class="container-fluid">
-            <div class="row">
-                <section>
-                    <div id="carousel-container">
-                        <div>
-                            <ul id="carousel" class="animate">
+        <section class="carouselSection">
+            <div class="container-fluid" id="carousel-container">
+                <div class="row">
+                    <ul id="carousel" class="animate">
+                        <li class="slide animate">
+                            <img src="/assets/img/slider-image-7.jpg" />
+                            <div class="content">
+                                <h6>EXCLUSIVE OFFER <span> -40% OFF</span></h6>
+                                <h1 class="fw-bold py-2"> Quality Freshness Guarenteed!</h1>
+                                <p>Only this week. Don't miss...</p>
+                                <p style="display: inline-block">from
+                                <h5>$14.35</h5>
+                                </p>
+                                <button class="btn btn-info">Shop Now --></button>
+                            </div>
+                        </li>
+                        <li class="slide animate">
+                            <img src="/assets/img/slider-image-6.jpg" />
+                            <div class="content">
+                                <h6>EXCLUSIVE OFFER <span> -20% OFF</span></h6>
+                                <h1 class="fw-bold py-2"> A different kind of grocyery store</h1>
+                                <p>Only this week. Don't miss...</p>
+                                <span>from <h5>$7.99</h5></span>
+                                <button class="btn btn-info">Shop Now --></button>
+                            </div>
+                        </li>
+                        <li class="slide animate">
+                            <img src="/assets/img/slider-image-7.jpg" />
+                            <div class="content">
+                                <h6>EXCLUSIVE OFFER <span> -40% OFF</span></h6>
+                                <h1 class="fw-bold py-2"> Quality Freshness Guarenteed!</h1>
+                                <p>Only this week. Don't miss...</p>
+                                <p style="display: inline-block">from
+                                <h5>$14.35</h5>
+                                </p>
+                                <button class="btn btn-info">Shop Now --></button>
+                            </div>
+                        </li>
+                        <li class="slide animate">
+                            <img src="/assets/img/slider-image-6.jpg" />
+                            <div class="content">
+                                <h6>EXCLUSIVE OFFER <span> -20% OFF</span></h6>
+                                <h1 class="fw-bold py-2"> A different kind of grocyery store</h1>
+                                <p>Only this week. Don't miss...</p>
+                                <span>from <h5>$7.99</h5></span>
+                                <button class="btn btn-info">Shop Now --></button>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div id="controls">
+                    <span id="prev"><i class="fas fa-chevron-left left"></i></span>
+                    <span id="next"><i class="fas fa-chevron-right right"></i></span>
+                </div>
+            </div>
+        </section>
 
-                                <li class="slide animate">
-                                    <img src="/assets/img/slider-image-7.jpg" />
-                                    <div class="content">
-                                        <h1>Salam</h1>
-                                        <p>Sag ol</p>
-                                    </div>
-                                </li>
-                                <li class="slide animate">
-                                    <img src="/assets/img/slider-image-6.jpg" />
-                                    <div class="content">
-                                        <h1>sag ol</h1>
-                                        <p>Salam</p>
-                                    </div>
-                                </li>
-                                <li class="slide animate">
-                                    <img src="/assets/img/slider-image-7.jpg" />
-                                    <div class="content">
-                                        <h1>Salam</h1>
-                                        <p>Sag ol</p>
-                                    </div>
-                                </li>
-                                <li class="slide animate">
-                                    <img src="/assets/img/slider-image-6.jpg" />
-                                    <div class="content">
-                                        <h1>sag ol</h1>
-                                        <p>Salam</p>
-                                    </div>
-                                </li>
-                            </ul>
+        <section class="categorySection">
+            <div class="container my-5">
+                <div class="row ">
+                    <div class="categories  col-lg-12 d-flex">
+                        <div class="col-2" style="width: 260px;height: 320px; border: 1px solid grey "><a href="">1</a>
                         </div>
-                        <div id="controls">
-                            <span id="prev"><i class="fas fa-chevron-left left"></i></span>
-                            <span id="next"><i class="fas fa-chevron-right right"></i></span>
+                        <div class="col-lg-10 d-flex" style="flex-wrap: wrap">
+                            <div class="col-lg-2" style="width: 260px;height: 160px; border: 1px solid grey "><a
+                                    href="">2</a></div>
+                            <div class="col-lg-2" style="width: 260px;height: 160px; border: 1px solid grey "><a
+                                    href="">3</a></div>
+                            <div class="col-lg-2" style="width: 260px;height: 160px; border: 1px solid grey "><a
+                                    href="">4</a></div>
+                            <div class="col-lg-2" style="width: 260px;height: 160px; border: 1px solid grey "><a
+                                    href="">5</a></div>
+                            <div class="col-lg-2" style="width: 260px;height: 160px; border: 1px solid grey "><a
+                                    href="">6</a></div>
+                            <div class="col-lg-2" style="width: 260px;height: 160px; border: 1px solid grey "><a
+                                    href="">7</a></div>
+                            <div class="col-lg-2" style="width: 260px;height: 160px; border: 1px solid grey "><a
+                                    href="">8</a></div>
+                            <div class="col-lg-2" style="width: 260px;height: 160px; border: 1px solid grey "><a
+                                    href="">9</a></div>
                         </div>
                     </div>
-                </section>
+
+                </div>
             </div>
-        </div>
+        </section>
+
+        <section class="deadlineSection">
+            <div class="container my-5">
+                <div class="row ">
+                    <div class="categories  col-lg-12 d-flex">
+                        <div class="col-lg-3 " style="width: 35%;height: 640px; border: 1px solid grey ; "><a
+                                href="">1</a>
+                        </div>
+                        <div class="col-lg-8 d-flex" style="flex-wrap: wrap; margin-left: 40px;">
+                            <div class="col-lg-2 col-md-4 col-sm-6"
+                                style="width: 270px;height: 330px; border: 1px solid grey "><a href="">2</a></div>
+                            <div class="col-lg-2 col-md-4 col-sm-6"
+                                style="width: 270px;height: 330px; border: 1px solid grey "><a href="">3</a></div>
+                            <div class="col-lg-2 col-md-4 col-sm-6"
+                                style="width: 270px;height: 330px; border: 1px solid grey "><a href="">4</a></div>
+                            <div class="col-lg-2 col-md-4 col-sm-6"
+                                style="width: 270px;height: 330px; border: 1px solid grey "><a href="">5</a></div>
+                            <div class="col-lg-2 col-md-4 col-sm-6"
+                                style="width: 270px;height: 330px; border: 1px solid grey "><a href="">6</a></div>
+                            <div class="col-lg-2 col-md-4 col-sm-6"
+                                style="width: 270px;height: 330px; border: 1px solid grey "><a href="">7</a></div>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <section class="weekendDiscountSection">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 d-flex justify-content-between">
+                        <div class="col-lg-6 col-sm-12">
+                            <div style="border: 1px solid; height: 300px; " class="leftSide"></div>
+                        </div>
+
+                        <div class="col-lg-6 col-sm-12">
+                            <div style="border: 1px solid; height: 300px; " class="rightSide"></div>
+                        </div>
+
+                    </div>
+                    <div class="col-12 py-4 d-flex">
+                        <div class="col-4">
+                            <h4> BEST SELLERS</h4>
+                            Do not miss the current offers until the end of March.
+                        </div>
+                        <div class="col-2 offset-7">
+                            <button class="btn btn-info">View All --></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="carouselProductSection">
+            <div class="container">
+                <div class="row col-12 d-flex " style=" flex-wrap: wrap">
+                    <div style="height: 300px;width: 20%; border: 1px solid;"></div>
+                    <div style="height: 300px;width: 20%; border: 1px solid;"></div>
+                    <div style="height: 300px;width: 20%; border: 1px solid;"></div>
+                    <div style="height: 300px;width: 20%; border: 1px solid;"></div>
+                    <div style="height: 300px;width: 20%; border: 1px solid;"></div>
+
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
