--- a/index.html
+++ b/index.html
@@ -416,10 +416,9 @@
 
 
     <footer>
-
-        <div class="container-fluid">
+        <div class="container-fluid couponSection">
             <div class="row">
-                <div class="emailSection col-12 d-flex my-5">
+                <div class="email col-12 d-flex">
                     <div class="content col-1 offset-1">
                         <h6>
                             $20 discount for your first order
@@ -436,6 +435,128 @@
                     <div class="coupon offset-2">
                         <img src="/assets/img/coupon.png" alt="">
                     </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-fluid serviceBody">
+            <div class="container service">
+                <div class="row">
+                    <div class=" col-12 d-flex justify-content-around">
+                        <div class="col-3 d-flex justify-content-around">
+                            <h5>Everyday fresh products</h5>
+                            <span> | </span>
+                        </div>
+                        <div class="col-3 d-flex justify-content-around">
+                            <h5>Free delivery for order over $70</h5>
+                        </div>
+                        <div class="col-3 d-flex justify-content-around">
+                            <span> | </span>
+                            <h5> Daily Mega Discounts</h5>
+                        </div>
+                        <div class="col-3  d-flex justify-content-around">
+                            <span> | </span>
+                            <h5>Best price on the market</h5>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <div class="container-fluid productsBody">
+            <div class="container products">
+                <div class="row">
+                    <div class="d-flex justify-content-around col-11">
+                        <ul>
+                            <a href="">FRUIT & VEGETABLES</a>
+                            <li class="mt-3"><a href="">Fresh Vegetables</a></li>
+                            <li><a href="">Herbs & Seasonings</a></li>
+                            <li><a href="">Fresh Fruits</a></li>
+                            <li><a href="">Cuts & Sprouts</a></li>
+                            <li><a href="">Exotic Fruits & Veggies</a></li>
+                            <li><a href="">Packaged Produce</a></li>
+                            <li><a href="">Party Trays</a></li>
+                        </ul>
+                        <ul>
+                            <a href="">BREAKFAST & DAIRY</a>
+                            <li class="mt-3"><a href="">Milk & Flavoured Milk</a></li>
+                            <li><a href="">Butter and Margarine</a></li>
+                            <li><a href="">Cheese</a></li>
+                            <li><a href="">Eggs Substitutes</a></li>
+                            <li><a href="">Honey</a></li>
+                            <li><a href="">Marmalades</a></li>
+                            <li><a href="">Sour Cream and Dips</a></li>
+                            <li><a href="">Yogurt</a></li>
+                        </ul>
+                        <ul><a href="">MEAT & SEAFOOD</a>
+                            <li class="mt-3"><a href="">Breakfast Sausage</a></li>
+                            <li><a href="">Dinner Sausage</a></li>
+                            <li><a href="">Beef</a></li>
+                            <li><a href="">Chicken</a></li>
+                            <li><a href="">Sliced Deli Meat</a></li>
+                            <li><a href="">Shrimp</a></li>
+                            <li><a href="">Wild Caught Fillets</a></li>
+                            <li><a href="">Crab and Shellfish</a></li>
+                            <li><a href="">Farm Raised Fillets</a></li>
+                        </ul>
+                        <ul>
+                            <a href="">BEVERAGES</a>
+                            <li class="mt-3"><a href="">Water</a></li>
+                            <li><a href="">Sparkling Water</a></li>
+                            <li><a href="">Soda & Pop</a></li>
+                            <li><a href="">Coffee</a></li>
+                            <li><a href="">Milk & Plant-Based Milk</a></li>
+                            <li><a href="">Tea & Kombucha</a></li>
+                            <li><a href="">Drink Boxes & Pouches</a></li>
+                            <li><a href="">Craft Beer</a></li>
+                            <li><a href="">Wine</a></li>
+                        </ul>
+                        <ul>
+                            <a href="">BREADS & BAKERY</a>
+                            <li class="mt-3"><a href="">Milk & Flavoured Milk</a></li>
+                            <li><a href="">Butter and Margarine</a></li>
+                            <li><a href="">Cheese</a></li>
+                            <li><a href="">Eggs Substitutes</a></li>
+                            <li><a href="">Honey</a></li>
+                            <li><a href="">Marmalades</a></li>
+                            <li><a href="">Sour Cream and Dips</a></li>
+                            <li><a href="">Yogurt</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="container-fluid contactBody">
+            <div class="container contact">
+                <div class="row my-5 col-12">
+                    <div class="col-2">
+                        <div class="contactNumb d-flex">
+                            <span> 8 800 555-55</span>
+                            <span>Working 8:00 - 22:00</span>
+                        </div>
+                    </div>
+                    <div class="col-3 offset-3">
+                        <strong class="fs-6">Download App on Mobile : </strong>
+                        <div class="fs-6"> 15% discount on your first purchase
+                        </div>
+                    </div>
+                    <div class="col-2 d-flex h-100 justify-content-around">
+                        <img src="/assets/img/google-play.png" alt="">
+                        <img src="/assets/img/app-store.png" alt="">
+                    </div>
+                    <div class="col-2">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-fluid copyrightBody my-4">
+            <div class="container copyright">
+                <div class="row py-2 ">
+                    <div>Copyright 2022 © Bacola WordPress Theme. All rights reserved. Powered by KlbTheme.</div>
                 </div>
             </div>
         </div>
