feat: categprySection 90% completed

--- a/index.html
+++ b/index.html
@@ -249,8 +249,7 @@
                                 <img style="height: 120px; padding:20px 15px;" src="/assets/img/biscuitssnacks-1.jpg"
                                     alt="">
                                 <p class="d-flex" style="width: 135px; flex-direction: column; padding:25px 3px ;">
-                                    <strong> Biscuits &
-                                        Snacks</strong>
+                                    <strong> Biscuits & Snacks</strong>
                                     <span style="padding: 10px 0"> 6 Items</span>
                                 </p>
                             </div>
@@ -259,8 +258,7 @@
                                 <img style="height: 120px; padding:20px 15px;" src="/assets/img/breadbakery-1.jpg"
                                     alt="">
                                 <p class="d-flex" style="width: 135px; flex-direction: column; padding:25px 3px ;">
-                                    <strong>
-                                        Breads & Bakery</strong>
+                                    <strong> Breads & Bakery</strong>
                                     <span style="padding: 10px 0"> 6 Items</span>
                                 </p>
                             </div>
@@ -268,9 +266,8 @@
                                 style="width: 260px; border: 1px solid rgb(205, 205, 205) ">
                                 <img style="height: 120px; padding:20px 15px;" src="/assets/img/dairy-1.jpg" alt="">
                                 <p class="d-flex" style="width: 135px; flex-direction: column; padding:25px 3px ;">
-                                    <strong>
-                                        Breads & Bakery</strong>
-                                    <span style="padding: 10px 0"> 6 Items</span>
+                                    <strong>Breakfast & Dairy</strong>
+                                    <span style="padding: 10px 0"> 8 Items</span>
                                 </p>
                             </div>
 
@@ -279,9 +276,8 @@
                                 <img style="height: 120px; padding:20px 15px;" src="/assets/img/category-image4.png"
                                     alt="">
                                 <p class="d-flex" style="width: 135px; flex-direction: column; padding:25px 3px ;">
-                                    <strong>
-                                        Breads & Bakery</strong>
-                                    <span style="padding: 10px 0"> 6 Items</span>
+                                    <strong>Frozen Foods</strong>
+                                    <span style="padding: 10px 0"> 7 Items</span>
                                 </p>
                             </div>
 
@@ -290,9 +286,8 @@
                                 <img style="height: 120px; padding:20px 15px;" src="/assets/img/fruitvegetables-1.jpg"
                                     alt="">
                                 <p class="d-flex" style="width: 135px; flex-direction: column; padding:25px 3px ;">
-                                    <strong>
-                                        Breads & Bakery</strong>
-                                    <span style="padding: 10px 0"> 6 Items</span>
+                                    <strong> Fruits & Vegetables</strong>
+                                    <span style="padding: 10px 0"> 12 Items</span>
                                 </p>
                             </div>
                             <div class="col-lg-2 col-md-6 d-flex"
@@ -300,27 +295,24 @@
                                 <img style="height: 120px; padding:20px 15px;" src="/assets/img/category-image2.png"
                                     alt="">
                                 <p class="d-flex" style="width: 135px; flex-direction: column; padding:25px 3px ;">
-                                    <strong>
-                                        Breads & Bakery</strong>
-                                    <span style="padding: 10px 0"> 6 Items</span>
+                                    <strong>Grocery & Staples</strong>
+                                    <span style="padding: 10px 0"> 7 Items</span>
                                 </p>
                             </div>
                             <div class="col-lg-2 col-md-6 d-flex"
                                 style="width: 260px; border: 1px solid rgb(205, 205, 205) ">
                                 <img style="height: 120px; padding:20px 15px;" src="/assets/img/household-1.jpg" alt="">
                                 <p class="d-flex" style="width: 135px; flex-direction: column; padding:25px 3px ;">
-                                    <strong>
-                                        Breads & Bakery</strong>
-                                    <span style="padding: 10px 0"> 6 Items</span>
+                                    <strong>Household Needs</strong>
+                                    <span style="padding: 10px 0"> 1 Items</span>
                                 </p>
                             </div>
                             <div class="col-lg-2 col-md-6 d-flex"
                                 style="width: 260px; border: 1px solid rgb(205, 205, 205) ">
                                 <img style="height: 120px; padding:20px 15px;" src="/assets/img/meat-1.jpg" alt="">
                                 <p class="d-flex" style="width: 135px; flex-direction: column; padding:25px 3px ;">
-                                    <strong>
-                                        Breads & Bakery</strong>
-                                    <span style="padding: 10px 0"> 6 Items</span>
+                                    <strong> Meats & Seafood</strong>
+                                    <span style="padding: 10px 0"> 5 Items</span>
                                 </p>
                             </div>
                         </div>
