--- a/index.html
+++ b/index.html
@@ -417,13 +417,28 @@
         <section class="weekendDiscountSection">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12 d-flex justify-content-between" style="flex-wrap: wrap;">
+                    <div class="col-lg-12 d-flex justify-content-around">
                         <div class="col-lg-6 col-md-12">
-                            <div style="border: 1px solid; height: 300px; " class="leftSide"></div>
+                            <div class="leftSide side">
+                                <img src="/assets/img/bacola-banner-11.jpg" alt="">
+                                <div class="content">
+                                    <h6>WEEKEND DISCOUNT 40%</h6>
+                                    <h2>Cookie and Ice Cream</h2>
+                                    <p>Bacola Weekend Discount</p>
+                                    <button class="btn btn-primary">Shop Now</button>
+                                </div>
+                            </div>
                         </div>
-
                         <div class="col-lg-6 col-md-12 ">
-                            <div style="border: 1px solid; height: 300px; " class="rightSide"></div>
+                            <div class="rightSide side">
+                                <img src="/assets/img/bacola-banner-12.jpg" alt="">
+                                <div class="content">
+                                    <h6>WEEKEND DISCOUNT 30%</h6>
+                                    <h2>Cookie and Ice Cream</h2>
+                                    <p>Bacola Weekend Discount</p>
+                                    <button class="btn btn-danger">Shop Now</button>
+                                </div>
+                            </div>
                         </div>
 
                     </div>
