feat: productCarousel 70% completed

--- a/index.html
+++ b/index.html
@@ -457,13 +457,62 @@
 
         <section class="carouselProductSection">
             <div class="container">
-                <div class="row col-12 d-flex " style=" flex-wrap: wrap">
-                    <div style="height: 300px;width: 20%; border: 1px solid;"></div>
-                    <div style="height: 300px;width: 20%; border: 1px solid;"></div>
-                    <div style="height: 300px;width: 20%; border: 1px solid;"></div>
-                    <div style="height: 300px;width: 20%; border: 1px solid;"></div>
-                    <div style="height: 300px;width: 20%; border: 1px solid;"></div>
-
+                <div class="row col-11 d-flex " style=" flex-wrap: wrap">
+                    <!-- <div style="height: 300px;width: 20%; border: 1px solid;"></div> -->
+                    <div class="product  col-3">
+                        <div class="content">
+                            <img src="/assets/img/product-image-62-346x310.jpg" alt="">
+                            <a href="">All Natural Italian-Style Chicken Meatballs </a>
+                            <strong>IN STOCK</strong>
+                            <p><img src="/assets/img/starts/4star.JPG" alt=""></p>
+                            <span>$11.68 $10.58</span>
+                            <button>Add To Cart</button>
+                        </div>
+                    </div>
+                    <div class="product col-3">
+                        <div class="content">
+                            <img src="/assets/img/product-image-60-346x310.jpg" alt="">
+                            <a href="">Angie’s Boomchickapop Sweet & Salty Kettle Corn </a>
+                            <strong>IN STOCK</strong>
+                            <p><img src="/assets/img/starts/4star.JPG" alt=""></p>
+                            <span>$11.68 $10.58</span>
+                            <button>Add To Cart</button>
+                        </div>
+                    </div>
+                    <div class="product col-3">
+                        <div class="content">
+                            <img src="/assets/img/product-image-46-346x310.jpg" alt="">
+                            <a href="">Field Roast Chao Cheese Creamy Original</a>
+                            <strong>IN STOCK</strong>
+                            <p><img src="/assets/img/starts/5star.JPG" alt=""></p>
+                            <span>$11.68 $10.58</span>
+                            <button>Add To Cart</button>
+                        </div>
+                    </div>
+                    <div class="product col-3">
+                        <div class="content">
+                            <img src="/assets/img/product-image-57-346x310.jpg" alt="">
+                            <a href="">Fresh Organic Broccoli Crowns</a>
+                            <strong>IN STOCK</strong>
+                            <p><img src="/assets/img/starts/4star.JPG" alt=""></p>
+                            <span>$11.68 $10.58</span>
+                            <button>Add To Cart</button>
+                        </div>
+                    </div>
+                    <div class="product col-3">
+                        <div class="content">
+                            <img src="/assets/img/product-image-48-346x310.jpg" alt="">
+                            <a href="">Encore Seafoods Stuffed Alaskan Salmon</a>
+                            <strong>IN STOCK</strong>
+                            <p><img src="/assets/img/starts/5star.JPG" alt=""></p>
+                            <span>$11.68 $10.58</span>
+                            <button>Add To Cart</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="controls">
+                    <span class="prev"><i class="fas fa-chevron-left left"></i></span>
+                    <span class="next"><i class="fas fa-chevron-right right"></i></span>
                 </div>
             </div>
         </section>
