feat : new plugin productCarousel

--- a/index.html
+++ b/index.html
@@ -456,9 +456,96 @@
         </section>
 
         <section class="carouselProductSection">
+            <div class="cntnr" id="featurecntnr" style="margin:150px auto">
+                <div class="row mx-auto my-auto justify-content-center">
+                    <div id="featureCarousel" class="carousel slide" data-bs-ride="carousel">
+                        <div class="float-end pe-md-4">
+                            <a class="indicator" href="#featureCarousel" role="button" data-bs-slide="prev">
+                                <span class="fas fa-chevron-left" aria-hidden="true"></span>
+                            </a> &nbsp;&nbsp;
+                            <a class="w-aut indicator" href="#featureCarousel" role="button" data-bs-slide="next">
+                                <span class="fas fa-chevron-right" aria-hidden="true"></span>
+                            </a>
+                        </div>
+                        <div class="carousel-inner" role="listbox">
+                            <div class="carousel-item active">
+                                <div class="col-md-2">
+                                    <div class="card">
+                                        <div class="card-img">
+                                            <img src="/assets/img/product-image-62-346x310.jpg" class="img-fluid">
+                                            <a href="">All Natural Italian-Style Chicken Meatballs </a>
+                                            <strong>IN STOCK</strong>
+                                            <p><img src="/assets/img/starts/4star.JPG" alt=""></p>
+                                            <span>$11.68 $10.58</span>
+                                            <button>Add To Cart</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="col-md-2">
+                                    <div class="card">
+                                        <div class="card-img">
+                                            <img src="/assets/img/product-image-60-346x310.jpg" class="img-fluid">
+                                            <a href="">Angie’s Boomchickapop Sweet & Salty Kettle Corn </a>
+                                            <strong>IN STOCK</strong>
+                                            <p><img src="/assets/img/starts/4star.JPG" alt=""></p>
+                                            <span>$11.68 $10.58</span>
+                                            <button>Add To Cart</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="col-md-2">
+                                    <div class="card">
+                                        <div class="card-img">
+                                            <img src="/assets/img/product-image-46-346x310.jpg" class="img-fluid">
+                                            <a href="">Field Roast Chao Cheese Creamy Original</a>
+                                            <strong>IN STOCK</strong>
+                                            <p><img src="/assets/img/starts/5star.JPG" alt=""></p>
+                                            <span>$11.68 $10.58</span>
+                                            <button>Add To Cart</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="col-md-2">
+                                    <div class="card">
+                                        <div class="card-img">
+                                            <img src="/assets/img/product-image-57-346x310.jpg" class="img-fluid">
+                                            <a href="">Fresh Organic Broccoli Crowns</a>
+                                            <strong>IN STOCK</strong>
+                                            <p><img src="/assets/img/starts/4star.JPG" alt=""></p>
+                                            <span>$11.68 $10.58</span>
+                                            <button>Add To Cart</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="col-md-2">
+                                    <div class="card">
+                                        <div class="card-img">
+                                            <img src="/assets/img/product-image-48-346x310.jpg" class="img-fluid">
+                                            <a href="">Encore Seafoods Stuffed Alaskan Salmon</a>
+                                            <strong>IN STOCK</strong>
+                                            <p><img src="/assets/img/starts/5star.JPG" alt=""></p>
+                                            <span>$11.68 $10.58</span>
+                                            <button>Add To Cart</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
+
+        <!-- <section class="carouselProductSection">
             <div class="container">
                 <div class="row col-11 d-flex " style=" flex-wrap: wrap">
-                    <!-- <div style="height: 300px;width: 20%; border: 1px solid;"></div> -->
                     <div class="product  col-3">
                         <div class="content">
                             <img src="/assets/img/product-image-62-346x310.jpg" alt="">
@@ -484,7 +571,8 @@
                             <img src="/assets/img/product-image-46-346x310.jpg" alt="">
                             <a href="">Field Roast Chao Cheese Creamy Original</a>
                             <strong>IN STOCK</strong>
-                            <p><img src="/assets/img/starts/5star.JPG" alt=""></p>
+                            <p><img src="/assets/img/starts/5star.JPG" style="width: 120px; height: 30px !important"
+                                    alt=""></p>
                             <span>$11.68 $10.58</span>
                             <button>Add To Cart</button>
                         </div>
@@ -510,12 +598,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="controls">
-                    <span class="prev"><i class="fas fa-chevron-left left"></i></span>
-                    <span class="next"><i class="fas fa-chevron-right right"></i></span>
-                </div>
             </div>
-        </section>
+        </section> -->
+
+
     </main>
 
 
@@ -682,6 +768,16 @@
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
 <script src="/assets/script/countdown.js"></script>
+
+
+
+<script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+<script>
+</script>
+
 <script src="/assets/script/script.js"></script>
 
 </html>
